--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,28 @@
  p {
     padding-bottom: 15px;
  }
+
+ input {
+    background-color: rgb(25, 25, 205);
+    color: rgb(243, 228, 22);
+    cursor: pointer;
+ }
+
+ a[href^="http"] {
+    color: rgb(255, 251, 0);
+        }
+.p {
+    background-color: rgb(38, 230, 134);
+    color: rgb(11, 11, 231);
+}
+#element {
+    background-color: brown;
+    color: aliceblue;
+}
+
+.someClasses {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    background-color: rgb(239, 212, 8);
+    color:rgb(5, 111, 54);
+}
