--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,5 @@
 
 html {
     background: #E6E6E6;
-}
-
-.container {
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 3rem;
-    background: #C4C4C4;
-    width: 100%;
-    max-width: 68rem;
-    height: 50rem;
+    font-weight: 700;
 }
