--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,75 @@ html {
     background: #E6E6E6;
     font-weight: 700;
 }
+ .сontainer {
+    background: #C4C4C4;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 50px;
+    width: 100%;
+    height: 800px; 
+    max-width: 1100px;   
+   
+    
+}
+.block {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
+    background: #E6E6E6;
+    width: 100%;
+    max-width: 1000px;
+    
+  }
+  
+ 
+    .cube1 {
+        margin-right: 15px;
+        max-width: 200px;
+        float: left;
+        width: 100%;
+        height: 200px;
+        background: #FC8F8F;
+    }
+    p {
+        width: 200px;
+        height: 75px;    
+        font-size: 64px;
+        line-height: 75px;
+        color: #FFFFFF;
+        text-align: center;
+        padding: 25% 0;                
+        }
+
+             .cube2 {
+            width: 100%;
+            max-width: 200px;
+            height: 200px;
+            margin-left: 15px;
+            float: right;
+            background: #FC8F8F;    
+            }
+            .cubeOne {
+            width: 100%;
+            max-width: 100px;
+            height: 100px;
+            margin-left: 15px;
+            background: #FC8F8F;
+            float: right;
+            }
+
+
+            .cubeOne p {
+            width: 100px;
+            height: 37.5px;
+            font-size: 36px;
+            line-height: 42px;
+            text-align: center;
+            color: #FFFFFF;
+            padding: 25% 0;
+            }
+
+                .clearfix {
+                    display: block;
+                    clear: both;
+                }
