--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 html {
     background: #E6E6E6;
     font-weight: 700;
+    font-family: 'Roboto', sans-serif;
 }
  .сontainer {
     background: #C4C4C4;
@@ -49,31 +50,31 @@ html {
         }
 
              .cube2 {
-            width: 100%;
-            max-width: 200px;
-            height: 200px;
             margin-left: 15px;
             float: right;
+            max-width: 200px;
+            width: 100%;
+            height: 200px;
             background: #FC8F8F;    
             }
             .cubeOne {
-            width: 100%;
-            max-width: 100px;
-            height: 100px;
             margin-left: 15px;
             background: #FC8F8F;
             float: right;
+            max-width: 100px;
+            width: 100%;
+            height: 100px;
             }
 
 
             .cubeOne p {
-            width: 100px;
-            height: 37.5px;
-            font-size: 36px;
             line-height: 42px;
             text-align: center;
+            font-size: 36px;
             color: #FFFFFF;
             padding: 25% 0;
+            width: 100px;
+            height: 37.5px;
             }
 
                 .clearfix {
