--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
 #menu {
     padding: 0;
     margin: 0;
-    font-family:  Verdana;
+    font-family: 'Plaifair';
+    font-size: medium;
 }
 
 #menu li {
@@ -13,7 +14,7 @@
     margin: 0;
     width: 150px;
     text-align: center;
-    background:  #95DF8E;
+    background:  #817fd8;
     position: relative;
     padding-top: 12px;
 }
@@ -44,7 +45,7 @@
     display: block;
     width: 150px;
     height: 30px;
-    color:    #006A35;
+    color:    #024746;
     text-decoration: none;
     }
     
