--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,16 @@
+body {
+    background-color: rgb(242, 224, 202);
+}
+
 
 #menu {
     padding: 0;
     margin: 0;
     font-family: 'Plaifair';
-    font-size: medium;
+    font-size: large;
 }
+
+
 
 #menu li {
     list-style: none;
@@ -37,7 +43,7 @@
     margin: 0;
     width: 150px;
     text-align: center;
-    background: #95DF8E;
+    background: #ecd157;
     }
 
 
@@ -56,7 +62,7 @@
 
 
 #menu li:hover {
-    background: #35C835;
+    background: #35c8af;
     }
     
 #menu li ul li ul {
