add pointer css

--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,8 @@ body {
     margin: 0;
     width: 150px;
     text-align: center;
-    background: #ecd157;
+    background: #efc259;
+    cursor: pointer;
     }
 
 
